moving to jdk 17, with external openjdk nashorn