@@ -19,7 +19,7 @@ import com.wegas.core.persistence.variable.VariableDescriptor;
 import com.wegas.editor.view.I18nHtmlView;
 import java.util.Objects;
 import jakarta.persistence.Entity;
-import jdk.nashorn.api.scripting.JSObject;
+import org.openjdk.nashorn.api.scripting.JSObject;
 
 /**
  *
